# os

./: .gitignore  Cargo.toml  Makefile
src/: interrupts.rs  lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm  multiboot_header.asm
src/disk/: ata.rs  fat16.rs  mod.rs
src/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
