[package]
name = "os"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.9"
multiboot2 = { version = "0.19", default-features = false }
x86_64 = "0.14"
linked_list_allocator = "0.10"
pic8259 = "0.10"
pc-keyboard = "0.7"
